fix:fixed global page overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,6 +116,9 @@
   }
   body {
     @apply bg-background text-foreground;
-    overflow-x: hidden;
+   
+   
   }
 }
+
+
